test/corpus/async_await.txt
==================
Malformed async targets preserve following code
==================
flow first:
  async run
  run after
  let job = async run worker extra
  let async run -> Text:
  run finish

flow second:
  run complete

---

(source_file
  (flow
    (flow_keyword)
    (runnable_name)
    (colon)
    (line_end
      (newline))
    (flow_body
      (statements
        (run_statement
          (flow_async_keyword)
          (flow_run_keyword)
          (invalid_flow_reserved_statement
            (line_end
              (newline))))
        (run_statement
          (flow_run_keyword)
          (runnable_name)
          (line_end
            (newline)))
        (let_statement
          (flow_let_keyword)
          (local_name)
          (assign_operator)
          (run_statement
            (flow_async_keyword)
            (flow_run_keyword)
            (invalid_flow_reserved_statement
              (runnable_name)
              (text_line)
              (line_end
                (newline)))))
        (let_statement
          (flow_let_keyword)
          (run_statement
            (flow_async_keyword)
            (flow_run_keyword)
            (invalid_flow_reserved_statement
              (arrow)
              (type
                (builtin_type))
              (colon)
              (line_end
                (newline)))))
        (run_statement
          (flow_run_keyword)
          (runnable_name)
          (line_end
            (newline)))
        (blank_line))))
  (flow
    (flow_keyword)
    (runnable_name)
    (colon)
    (line_end
      (newline))
    (flow_body
      (statements
        (run_statement
          (flow_run_keyword)
          (runnable_name)
          (line_end
            (newline)))))))

==================
Async run targets and binding wrappers
==================
flow launch:
  let async_note = A launch description.
  let await_note = A waiting description.
  run worker
  async run worker
  let job = async run worker
  let async run worker
  async run: Research {{_}}.
  let job = async run -> Text: Research {{_}}.
  let async run:
    async and await remain literal.

---

(source_file
  (flow
    (flow_keyword)
    (runnable_name)
    (colon)
    (line_end
      (newline))
    (flow_body
      (statements
        (let_statement
          (flow_let_keyword)
          (local_name)
          (assign_operator)
          (text_inline
            (text_line)
            (line_end
              (newline))))
        (let_statement
          (flow_let_keyword)
          (local_name)
          (assign_operator)
          (text_inline
            (text_line)
            (line_end
              (newline))))
        (run_statement
          (flow_run_keyword)
          (runnable_name)
          (line_end
            (newline)))
        (run_statement
          (flow_async_keyword)
          (flow_run_keyword)
          (runnable_name)
          (line_end
            (newline)))
        (let_statement
          (flow_let_keyword)
          (local_name)
          (assign_operator)
          (run_statement
            (flow_async_keyword)
            (flow_run_keyword)
            (runnable_name)
            (line_end
              (newline))))
        (let_statement
          (flow_let_keyword)
          (run_statement
            (flow_async_keyword)
            (flow_run_keyword)
            (runnable_name)
            (line_end
              (newline))))
        (run_statement
          (flow_async_keyword)
          (flow_run_keyword)
          (inline_agic
            (colon)
            (text_inline
              (text_line)
              (line_end
                (newline)))))
        (let_statement
          (flow_let_keyword)
          (local_name)
          (assign_operator)
          (run_statement
            (flow_async_keyword)
            (flow_run_keyword)
            (inline_agic
              (arrow)
              (type
                (builtin_type))
              (colon)
              (text_inline
                (text_line)
                (line_end
                  (newline))))))
        (let_statement
          (flow_let_keyword)
          (run_statement
            (flow_async_keyword)
            (flow_run_keyword)
            (inline_agic
              (colon)
              (text_inline
                (text_block
                  (line_end
                    (newline))
                  (text_body
                    (text_body_line
                      (indented_raw_text)
                      (newline))))))))))))

==================
Await handles and result binding wrappers
==================
flow launch:
  await h
  let x = await h
  let await h
  let h = await h
  let await_note = await async_job

---

(source_file
  (flow
    (flow_keyword)
    (runnable_name)
    (colon)
    (line_end
      (newline))
    (flow_body
      (statements
        (await_statement
          (flow_await_keyword)
          (local_name)
          (line_end
            (newline)))
        (let_statement
          (flow_let_keyword)
          (local_name)
          (assign_operator)
          (await_statement
            (flow_await_keyword)
            (local_name)
            (line_end
              (newline))))
        (let_statement
          (flow_let_keyword)
          (await_statement
            (flow_await_keyword)
            (local_name)
            (line_end
              (newline))))
        (let_statement
          (flow_let_keyword)
          (local_name)
          (assign_operator)
          (await_statement
            (flow_await_keyword)
            (local_name)
            (line_end
              (newline))))
        (let_statement
          (flow_let_keyword)
          (local_name)
          (assign_operator)
          (await_statement
            (flow_await_keyword)
            (local_name)
            (line_end
              (newline))))))))

==================
Async inline text and await preserve repeat boundaries
==================
flow launch:
  repeat 2 times:
    let job = async run -> Finding[]:
      Research {{_}}.
      await job remains literal.
    await job # Write the result to the current value.
    until: Ready.
  run finish

---

(source_file
  (flow
    (flow_keyword)
    (runnable_name)
    (colon)
    (line_end
      (newline))
    (flow_body
      (statements
        (repeat_statement
          (flow_repeat_keyword)
          (integer_literal)
          (flow_times_keyword)
          (colon)
          (line_end
            (newline))
          (repeat_body
            (let_statement
              (flow_let_keyword)
              (local_name)
              (assign_operator)
              (run_statement
                (flow_async_keyword)
                (flow_run_keyword)
                (inline_agic
                  (arrow)
                  (type
                    (type_name)
                    (array_suffix))
                  (colon)
                  (text_inline
                    (text_block
                      (line_end
                        (newline))
                      (text_body
                        (text_body_line
                          (indented_raw_text)
                          (newline))
                        (text_body_line
                          (indented_raw_text)
                          (newline))))))))
            (await_statement
              (flow_await_keyword)
              (local_name)
              (line_end
                (plain_comment)
                (newline)))
            (until_clause
              (flow_until_keyword)
              (inline_agic_body
                (colon)
                (text_inline
                  (text_line)
                  (line_end
                    (newline)))))))
        (run_statement
          (flow_run_keyword)
          (runnable_name)
          (line_end
            (newline)))))))

==================
Spawn handles use ordinary await binding wrappers
==================
flow launch:
  let job = spawn research
  await job
  let result = await job
  let await job
  let job = await job

---

(source_file
  (flow
    (flow_keyword)
    (runnable_name)
    (colon)
    (line_end
      (newline))
    (flow_body
      (statements
        (let_statement
          (flow_let_keyword)
          (local_name)
          (assign_operator)
          (spawn_statement
            (flow_spawn_keyword)
            (runnable_name)
            (line_end
              (newline))))
        (await_statement
          (flow_await_keyword)
          (local_name)
          (line_end
            (newline)))
        (let_statement
          (flow_let_keyword)
          (local_name)
          (assign_operator)
          (await_statement
            (flow_await_keyword)
            (local_name)
            (line_end
              (newline))))
        (let_statement
          (flow_let_keyword)
          (await_statement
            (flow_await_keyword)
            (local_name)
            (line_end
              (newline))))
        (let_statement
          (flow_let_keyword)
          (local_name)
          (assign_operator)
          (await_statement
            (flow_await_keyword)
            (local_name)
            (line_end
              (newline))))))))

==================
Primary input cannot be an operation or await handle
==================
flow launch:
  _
  let value = _
  await _
  let result = await _
  run after

---

(source_file
  (flow
    (flow_keyword)
    (runnable_name)
    (colon)
    (line_end
      (newline))
    (flow_body
      (statements
        (invalid_flow_reserved_statement
          (line_end
            (newline)))
        (invalid_flow_reserved_statement
          (flow_let_keyword)
          (local_name)
          (assign_operator)
          (line_end
            (newline)))
        (invalid_flow_reserved_statement
          (flow_await_keyword)
          (text_line)
          (line_end
            (newline)))
        (let_statement
          (flow_let_keyword)
          (local_name)
          (assign_operator)
          (invalid_flow_reserved_statement
            (flow_await_keyword)
            (text_line)
            (line_end
              (newline))))
        (run_statement
          (flow_run_keyword)
          (runnable_name)
          (line_end
            (newline)))))))
