test/corpus/exec.txt
==================
Exec targets and repeat boundaries
==================
flow grow(next: Text):
  repeat 2 times:
    exec: Complete {{next}}.
  exec grow_v2 # Ready.

---

(source_file
  (flow
    (flow_keyword)
    (runnable_name)
    (params
      (lparen)
      (param
        (param_name)
        (colon)
        (type
          (builtin_type)))
      (rparen))
    (colon)
    (line_end
      (newline))
    (flow_body
      (statements
        (repeat_statement
          (flow_repeat_keyword)
          (integer_literal)
          (flow_times_keyword)
          (colon)
          (line_end
            (newline))
          (repeat_body
            (exec_statement
              (flow_exec_keyword)
              (inline_agic
                (colon)
                (text_inline
                  (text_line)
                  (line_end
                    (newline)))))))
        (exec_statement
          (flow_exec_keyword)
          (runnable_name)
          (line_end
            (plain_comment)
            (newline)))))))

==================
Exec inline layout and following statements
==================
flow grow:
  repeat 2 times:
    exec -> Text:
      Complete {{_}}.
    run after_inline
    until: Ready.
  exec grow

---

(source_file
  (flow
    (flow_keyword)
    (runnable_name)
    (colon)
    (line_end
      (newline))
    (flow_body
      (statements
        (repeat_statement
          (flow_repeat_keyword)
          (integer_literal)
          (flow_times_keyword)
          (colon)
          (line_end
            (newline))
          (repeat_body
            (exec_statement
              (flow_exec_keyword)
              (inline_agic
                (arrow)
                (type
                  (builtin_type))
                (colon)
                (text_inline
                  (text_block
                    (line_end
                      (newline))
                    (text_body
                      (text_body_line
                        (indented_raw_text)
                        (newline)))))))
            (run_statement
              (flow_run_keyword)
              (runnable_name)
              (line_end
                (newline)))
            (until_clause
              (flow_until_keyword)
              (inline_agic_body
                (colon)
                (text_inline
                  (text_line)
                  (line_end
                    (newline)))))))
        (exec_statement
          (flow_exec_keyword)
          (runnable_name)
          (line_end
            (newline)))))))
